--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/drop-down.loader.js";
       var config = {
-        dataUrl: buildUrl + "/drop-down.data.gz",
-        frameworkUrl: buildUrl + "/drop-down.framework.js.gz",
-        codeUrl: buildUrl + "/drop-down.wasm.gz",
+        dataUrl: buildUrl + "/drop-down.data",
+        frameworkUrl: buildUrl + "/drop-down.framework.js",
+        codeUrl: buildUrl + "/drop-down.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "dropDown",
